--- a/public/index.html
+++ b/public/index.html
@@ -348,7 +348,8 @@
             <div class="halloween-2021-flashmob__row">
                 <div class="halloween-2021-flashmob__col-title">
                     <div class="halloween-2021-flashmob__title-2">
-                        <span>НАШИ МАЛЕНЬКИЕ</span>
+                        <span>НАШИ </span>
+                        <span>МАЛЕНЬКИЕ</span>
                         <span>ПРИВЕДЕНИЯ</span>
                         <span>ВЫХОДЯТ</span>
                         <span>НА ОХОТУ</span>
